--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-list/cages-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-list/cages-list.component.html
@@ -1,114 +1,205 @@
-<div class="container ">
-  <div class="row pt-2">
-    <div class="col-12">
-      <div class="card">
-        <div class="container ">
-          <h1 class="d-flex justify-content-center pt-3 text-success m-4">Danh sách chuồng nuôi
-          </h1>
-          <div class="row pt-2 m-4">
-            <div class=" ">
-              <div class=" fw-bold float-start">
-                <button class="btn  btn-success  ">
-                  Tạo chuồng
-                </button>
-              </div>
+<main class="container-fluid " style="padding-top: 4rem">
+  <div class="row">
+    <div class="col-md-2 col-sm-12 " style="background-color: #009966;">
+      <div class="position-sticky ">
+        <ul class="text-decoration-none list-group mt-4 mb-4 ">
+          <li class="list-unstyled mb-2">
+            <a class="text-decoration-none   hvr-sweep-to-right">
+              <img src="https://cdn-icons-png.flaticon.com/512/1177/1177568.png"
+                   height="20px">
+              <span class="text-light">Quản lý nhân viên</span>
+            </a>
+          </li>
+          <li class="list-unstyled mb-2">
+            <a class=" text-decoration-none hvr-sweep-to-right pleft0"
+               href="https://getbootstrap.com/docs/5.1/examples/dashboard/#">
+              <img src="https://cdn-icons-png.flaticon.com/512/1178/1178215.png"
+                   height="20px">
+              <span class="text-light">Quản lý đàn</span>
+            </a>
+          </li>
 
-              <form (ngSubmit)="onSubmit()" #myNgForm="ngForm"
-                    class="d-flex  float-end col-md-7  col-lg-7 fw-bold px-2">
+          <li class="list-unstyled mb-2">
+            <a class=" text-decoration-none hvr-sweep-to-right pleft0"
+               [routerLink]="['/employee/list']">
+              <img src="https://cdn-icons-png.flaticon.com/512/1177/1177455.png"
+                   height="20px">
+              <span class="text-light">Quản lý chuồng nuôi</span>
+            </a>
+          </li>
+          <li class="list-unstyled mb-2">
+            <a class=" text-decoration-none hvr-sweep-to-right pleft0"
+               [routerLink]="['/customer/list']">
+              <img src="https://cdn-icons-png.flaticon.com/512/1060/1060673.png"
+                   height="20px">
+              <span class="text-light">Khám chữa trị</span>
+            </a>
+          </li>
+          <li class="list-unstyled mb-2">
+            <a class=" text-decoration-none hvr-sweep-to-right pleft0"
+               [routerLink]="['/real-estate-new/list-post-approval']">
+              <img src="https://cdn-icons-png.flaticon.com/512/1060/1060702.png" height="20px">
+              <span class="text-light">Quản lý bài đăng</span>
+            </a>
+          </li>
+          <li class="list-unstyled mb-2">
+            <a class=" text-decoration-none hvr-sweep-to-right pleft0"
+               href="https://getbootstrap.com/docs/5.1/examples/dashboard/#">
+              <img src="https://cdn-icons-png.flaticon.com/512/1060/1060668.png" height="20px">
 
-                <div class="col-md-9  col-lg-9 fw-bold px-2 ">
+              <span class="text-light">Giao dịch</span>
+            </a>
+          </li>
+          <li class="list-unstyled mb-2">
+            <a class="text-decoration-none hvr-sweep-to-right pleft0"
+               href="#">
+              <img src="https://cdn-icons-png.flaticon.com/512/1060/1060694.png" height="20px">
+              <span class="text-light">Lịch làm việc</span>
+            </a>
+          </li>
+          <li class="list-unstyled mb-2">
+            <a class="text-decoration-none hvr-sweep-to-right pleft0"
+               href="#">
+              <img src="https://cdn-icons-png.flaticon.com/512/1060/1060699.png" height="20px">
+              <span class="text-light">Hồ sơ biểu mẫu</span>
+            </a>
+          </li>
+          <li class="list-unstyled mb-2">
+            <a class=" text-decoration-none hvr-sweep-to-right pleft0"
+               href="#">
+              <img src="https://cdn-icons-png.flaticon.com/512/1060/1060674.png" height="20px">
+              <span class="text-light">Thống kê</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <section class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+      <div class="container-fluid" >
+        <div class="row pt-2">
+          <div class="col-12">
+            <div class="card">
+              <div class="container ">
+                <h1 class="d-flex justify-content-center pt-3 text-success m-4">Danh sách chuồng nuôi
+                </h1>
+                <div class="row pt-2 m-4">
+                  <div class=" ">
+                    <div class=" fw-bold float-start">
+                      <button class="btn  btn-success  ">
+                        Tạo chuồng
+                      </button>
+                    </div>
 
-                  <input [(ngModel)]="searchCage" class="form-control " id="name"
-                         type="text"
-                         name="customerName"
-                         placeholder=" Tên Nhân Viên - Ngày Tạo Chuồng - Loại Chuồng">
+                    <form (ngSubmit)="search()" #myNgForm="ngForm"
+                          class="d-flex  float-end col-md-7  col-lg-7 fw-bold px-2">
 
-                </div>
-                <div class="col-md-3 ms-sm-auto col-lg-3  ">
-                  <div class="float-end">
-                    <input class="btn btn-success  " type="submit"
-                           value="Tìm kiếm">
+                      <div class="col-md-9  col-lg-9 fw-bold px-2 ">
+
+                        <input [(ngModel)]="searchCage" class="form-control" id="name" [ngModelOptions]="{standalone: true}"
+                               type="text"
+                               name="customerName"
+                               placeholder=" Tên NV - Ngày Tạo Chuồng (yyyy-MM-dd) - Loại Chuồng">
+
+                      </div>
+                      <div class="col-md-3 ms-sm-auto col-lg-3  ">
+                        <div class="float-end">
+                          <button class="btn btn-success" type="submit"  (click)="onsubmit()"> Tìm Kiếm </button>
+                        </div>
+                      </div>
+                    </form>
+
                   </div>
                 </div>
-              </form>
 
-            </div>
-          </div>
+                <div class="">
+                  <div class="mt-3  table-responsive{-sm|-md|-lg|-xl|-xxl}">
 
-          <div class="">
-            <div class="mt-3  table-responsive{-sm|-md|-lg|-xl|-xxl}">
+                    <table class="table table-striped table-hover container-fluid">
+                      <thead class="text-white bg-success">
+                      <tr class=" text-start">
+                        <th>Mã Chuồng</th>
+                        <th>Mã Nhân Viên</th>
+                        <th>Họ Và Tên</th>
+                        <th>Ngày Tạo Chuồng</th>
+                        <th>Ngày Đóng Chuồng</th>
+                        <th>Loại chuồng</th>
+                        <th>Số Lượng Cá Thể</th>
+                        <th colspan="4" >Chỉnh sửa/Xóa</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr *ngFor="let cage of cages">
+                        <td>{{cage.id}}</td>
+                        <td>{{cage.employee.id}}</td>
+                        <td>{{cage.employee.name}}</td>
+                        <td>{{cage.openDate | date:"dd/MM/yyyy"}}</td>
+                        <td>{{cage.closeDate | date:"dd/MM/yyyy"}}</td>
+                        <td>{{cage.typeOfCage.name}}</td>
+                        <td>{{cage.quantily}}</td>
+                        <td class="text-center">
+                          <button class="btn btn-success text-center text-white  "
+                                  data-bs-toggle="modal"
+                          ><i class="fas fa-edit"></i> Sửa
+                          </button>
+                        <td>
+                        <td >
+                          <button class="btn btn-danger text-center  "
+                                  data-bs-toggle="modal"
+                          ><i class="fas fa-trash-alt"></i> Xóa
+                          </button>
+                        <td>
+                      </tr>
+                      </tbody>
 
-              <table class="table table-striped table-hover container-fluid">
-                <thead class="text-white bg-success">
-                <tr class=" text-start">
-                  <th>Mã Chuồng Nuôi</th>
-                  <th>Mã Nhân Viên</th>
-                  <th>Họ Và Tên</th>
-                  <th>Ngày Tạo Chuồng</th>
-                  <th>Ngày Đóng Chuồng</th>
-                  <th>Loại chuồng</th>
-                  <th>Số Lượng Cá Thể</th>
-                  <th colspan="2">Chỉnh sửa/Xóa</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let cage of cages">
-                  <td>{{cage.id}}</td>
-                  <td>{{cage.employee.id}}</td>
-                  <td>{{cage.employee.name}}</td>
-                  <td>{{cage.openDate}}</td>
-                  <td>{{cage.closeDate}}</td>
-                  <td>{{cage.typeOfCage.name}}</td>
-                  <td>{{cage.quantily}}</td>
-                  <td class="text-center">
-                    <button class="btn btn-sm btn-danger me-2" >Xóa</button>
-                    <button class="btn btn-sm btn-success" >Sửa</button>
-                  <td>
-                </tr>
-                </tbody>
+                    </table>
+                    <div *ngIf="message!==''" class="text-center row col-12 fs-5">
+                      <h4 class="text-danger fst-italic ">{{message}}</h4>
+                    </div>
+                  </div>
+                  <div class="me-5 pe-4 ">
+                    <ul class="pagination pagination-sm justify-content-end  pagination-lg" style="margin:20px 0">
 
-              </table>
-            </div>
-            <div class="me-5 pe-4 ">
-              <ul class="pagination pagination-sm justify-content-end  pagination-lg" style="margin:20px 0">
+                      <div *ngIf="this.page >0 then previous"></div>
+                      <ng-template #previous>
+                        <li class="page-item">
+                          <button
+                            (click)="previousClick(1)" class="page-link" type="button">Trang trước
+                          </button>
+                        </li>
+                      </ng-template>
+                      <li class="page-item">
 
-                <div *ngIf="this.page >0 then previous"></div>
-                <ng-template #previous>
-                  <li class="page-item">
-                    <button
-                      (click)="previousClick(1)" class="page-link" type="button">Trang trước
-                    </button>
-                  </li>
-                </ng-template>
-                <li class="page-item">
-
-                  <input class="page-link" type="number" value="1" min="1" [max]="totalPages"
-                         placeholder="{{totalPages}}" aria-label="Username" [value]="page + 1"
-                         aria-describedby="basic-addon1"
-                         (change)="findPaginnation($event.target.value)">
+                        <input class="page-link" type="number" value="1" min="1" [max]="totalPages"
+                               placeholder="{{totalPages}}" aria-label="Username" [value]="page + 1"
+                               aria-describedby="basic-addon1"
+                               (change)="findPaginnation($event.target.value)">
 
 
-                </li>
-                <li class="page-item ">
+                      </li>
+                      <li class="page-item ">
 
-                  <span class="input-group-text page-link">{{page + 1}}/{{totalPages}}</span>
+                        <span class="input-group-text page-link">{{page + 1}}/{{totalPages}}</span>
 
-                </li>
+                      </li>
 
-                <div *ngIf="this.page  < this.totalPages-1 then nexts "></div>
-                <ng-template #nexts>
-                  <li class="page-item">
-                    <button (click)="nextClick(1)" class="page-link" type="button">Trang sau</button>
-                  </li>
-                </ng-template>
-              </ul>
+                      <div *ngIf="this.page  < this.totalPages-1 then nexts "></div>
+                      <ng-template #nexts>
+                        <li class="page-item">
+                          <button (click)="nextClick(1)" class="page-link" type="button">Trang sau</button>
+                        </li>
+                      </ng-template>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </div>
-</div>
+
+</main>
 
 
 
