--- a/C0721G2-livestock-farm-FE/src/styles.css
+++ b/C0721G2-livestock-farm-FE/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+.custom-dialog-create-customer .mat-dialog-container {
+  /*position: relative;*/
+  /*padding: 5px;*/
+  /*overflow: visible;*/
+  /*border-radius: 40px;*/
+  background: #198754;
+  /*box-shadow: none;*/
+}/* You can add global styles to this file, and also import other style files */
