--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-create/cages-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-create/cages-create.component.html
@@ -1,16 +1,22 @@
 <head>
   <title>Thêm mới chuồng nuôi</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script src="/dist/scripts.min.js"></script>
   <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script src="//www.danstools.com/js/forum.js"></script>
+<!--  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>-->
+<!--  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+<!--  booostrap ser2-->
+<!--  <div>-->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
+<!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
+<!--  </div>-->
 </head>
 <body>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
 <div class="container register">
   <div class="row">
     <div class="col-md-3 register-left">
@@ -29,6 +35,13 @@
       <!--                            </li>-->
       <!--                        </ul>-->
       <div class="tab-content" id="myTabContent">
+        <div *ngIf="showAlert" class="alert alert-success alert-dismissible fade show" role="alert"
+             style="text-align: center; width: 50% ; margin-left: 200px">
+          Tạo chuồng thành công
+          <button (click)="closeAlert()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
           <h3 class="register-heading">Vui lòng nhập biểu mẫu bên dưới để tạo chuồng nuôi.</h3>
           <form [formGroup]="createCage" (ngSubmit)="submit()">
@@ -49,10 +62,10 @@
                 </div>
                 <div class="form-group">
                   <label>Loại chuồng nuôi.</label>
-                  <!--                  <div class="error alert-danger"-->
-                  <!--                       *ngIf="createCage.controls.id.dirty && createCage.controls.id.hasError('required') ">-->
-                  <!--                    Không được bỏ trống-->
-                  <!--                  </div>-->
+                                    <div class="error alert-danger"
+                                         *ngIf="createCage.controls.typeOfCage.dirty && createCage.controls.typeOfCage.hasError('required') ">
+                                      Không được bỏ trống
+                                    </div>
                   <select class="custom-select mt-1" formControlName="typeOfCage" name="typeOfCage"
                           aria-label="Default select example">
                     <!--                    <option selected>Vui lòng chọn loại chuồng</option>-->
@@ -67,8 +80,16 @@
                   <!--                       *ngIf="createCage.controls.id.dirty && createCage.controls.id.hasError('required') ">-->
                   <!--                    Không được bỏ trống-->
                   <!--                  </div>-->
-                  <span *ngIf="employeeExist" class="error alert-danger">Tên nhân viên không tồn tại</span>
                   <input placeholder="NV-xxxx" type="text" class="form-control" formControlName="employee"/>
+                  <div *ngIf="employeeExist" class="error alert-danger">Tên nhân viên không tồn tại</div>
+                  <div class="error alert-danger"
+                       *ngIf="createCage.controls.employee.dirty && createCage.controls.employee.hasError('required') ">
+                    Không được bỏ trống
+                  </div>
+                  <div class="error alert-danger"
+                       *ngIf="createCage.controls.employee.dirty && createCage.controls.employee.hasError('pattern') ">
+                    Định dạng là NV-xxxx
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
@@ -86,6 +107,7 @@
                 </div>
                 <div class="form-group">
                   <label>Số lượng cá thể.</label>
+                  <input type="text" class="form-control" formControlName="quantity"/>
                   <div class="error alert-danger"
                        *ngIf="createCage.controls.quantity.dirty && createCage.controls.quantity.hasError('required')">
                     Không được bỏ trống
@@ -94,9 +116,8 @@
                        *ngIf="createCage.controls.quantity.dirty && createCage.controls.quantity.hasError('pattern') ">
                     Nhập chưa đúng định dạng.
                   </div>
-                  <input type="text" class="form-control" formControlName="quantity"/>
                 </div>
-                <button type="submit" class=" btn btnRegister">Đồng ý</button>
+                <button type="submit" class=" btn btnRegister" [disabled]="createCage.invalid">Đồng ý</button>
               </div>
             </div>
           </form>
