--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-edit/employee-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-edit/employee-edit.component.html
@@ -159,15 +159,15 @@
               </div>
             </div>
 
-            <div class="btn-toolbar mb-3 justify-content-md-center bd-highlight" role="toolbar"
-                 aria-label="Toolbar with button groups">
-              <div class="btn-group me-2">
-                <button class="btn btn-secondary" type="submit">Xóa</button>
-              </div>
-              <div class="btn-group me-2">
-                <button class="btn btn-success" type="submit">Lưu</button>
-              </div>
-            </div>
+<!--            <div class="btn-toolbar mb-3 justify-content-md-center bd-highlight" role="toolbar"-->
+<!--                 aria-label="Toolbar with button groups">-->
+<!--              <div class="btn-group me-2">-->
+<!--                <button class="btn btn-secondary" type="submit">Xóa</button>-->
+<!--              </div>-->
+<!--              <div class="btn-group me-2">-->
+<!--                <button class="btn btn-success" type="submit">Lưu</button>-->
+<!--              </div>-->
+<!--            </div>-->
             <div>
               <i><span style="color: red">Lưu ý:</span><span style="color: black">  Những thông tin (</span><span
                 style="color: red">*</span><span style="color: black">) bắt buộc nhập.</span></i>
